golden/error/lex_fstring_double_ho_hole.test
f"This f-string has no holes."

# output:
 --> stdin:1:0
  |
1 | f"This f-string has no holes."
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Error: This f-string has no holes, it can be a regular string.
